# ai-analyst-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
.agents/: CONTEXT.md
.github/workflows/: ci-cd.yml  evaluation.yml  semgrep.yml
agents/: investigation_core.py  ml_analyst_agent.py  react_agent.py  skill_selection_engine.py
agents/planning/: skill_selection_engine.py  skill_selector.py
agents/reasoning/: react_agent.py
agents/workflow/: investigation_core.py
api/: config.py  main.py  security.py
api/routers/: incidents.py
api/schemas/: incidents.py
api/services/: incident_service.py
configs/: settings.py
docs/: DEVELOPMENT_GUIDE.md
docs/agents/: ml_analyst_agent.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/decisions/: ADR-001-dynamic-skills.md  ADR-002-mcp.md  ADR-003-confidence-scoring.md  ADR-004-react-skill-selection.md
docs/design/: DYNAMIC_DISCOVERY_DESIGN.md
docs/specifications/: SYSTEM_SPEC.md  evidence_model.md  incident_schema.md  root_cause_analysis.md  skill_contract.md  skill_selection_engine.md
domain/: evidence_ledger.py  incident.py
evaluation/: __init__.py  config.py  report.py
evaluation/datasets/: example.jsonl
evaluation/harness/: run_one_case.py
evaluation/runners/: eval_runner.py
hooks/: run_pytest.sh
hooks/semgrep/: no_raw_shell_exec.yaml
infra/: skill_loader.py  skill_registry.py
infra/security/: exceptions.py
infra/tools/: prediction_access.py
scripts/: verify_setup.py
services/mcp/: skill_mcp_server.py
services/mock_env/: dataset_store.py  prediction_store.py
shared/: logging_config.py  logging_utils.py  skill_loader.py  skill_registry.py
shared/schemas/: evidence_ledger.py  finding.py  incident.py
shared/security/: __init__.py  audit_log.py  prompt_guard.py  redaction.py  validation.py
shared/tools/: dataset_access.py
skills/alert_correlation/: SKILL.md
skills/anomaly_detection/: SKILL.md
skills/concept_drift_analysis/: SKILL.md
skills/crash_loop_analysis/: SKILL.md
skills/dag_execution_analysis/: SKILL.md
skills/data_drift_analysis/: SKILL.md
skills/deployment_regression/: SKILL.md
skills/evaluation_analysis/: SKILL.md
skills/feature_pipeline_analysis/: SKILL.md
skills/incident_summary/: SKILL.md
skills/latency_analysis/: SKILL.md
skills/model_performance_analysis/: SKILL.md
skills/prediction_distribution_analysis/: SKILL.md
skills/resource_exhaustion/: SKILL.md
skills/root_cause_prioritization/: SKILL.md
skills/safety_metric_distribution_analysis/: SKILL.md
skills/serving_analysis/: SKILL.md
skills/task_state_monitoring/: SKILL.md
skills/training_pipeline_analysis/: SKILL.md
tests/agents/: test_ml_analyst_agent.py  test_react_agent.py  test_skill_selection_engine.py
tests/api/: test_incidents.py
(+24 files in other folders)
