[project]
name = "ml-analyst-agent"
version = "0.1.0"
description = "Production-grade AI Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "pydantic-settings",
    "structlog",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",
    "google-adk",
    "google-genai",
    "redis",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "semgrep",
    "pandas-stubs>=3.0.3.260530",
    "uv",
    "pytest-asyncio>=1.4.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ANN", "RUF"]
ignore = [
    "ANN401", # Any is occasionally the correct type for dynamic skill I/O
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"] # test functions do not need return-type annotations

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["^\\.venv/"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
asyncio_mode = "auto"
